[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "filequery"
authors = [{ name = "Markus Hutnik", email = "markus@markushutnik.com" }]
description = "Query CSV and Parquet files using SQL"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
license = { text = "MIT" }
version = "0.2.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
filequery = "filequery:fq_cli_handler"

[project.urls]
repository = "https://github.com/MarkyMan4/filequery"
