[tool.poetry]
name = "filequery"
version = "0.2.6"
description = "Query CSV and Parquet files using SQL"
authors = ["MarkyMan4 <markus.hutnik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.65.1"
duckdb = "^1.0.0"
numpy = "^1.26.4"
tree-sitter = "^0.22.3"

[tool.poetry.group.dev.dependencies]
twine = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
filequery = "filequery:fq_cli_handler"

[project.urls]
repository = "https://github.com/MarkyMan4/filequery"
